# tdmc-rs

./: .gitignore  Cargo.toml  README.md
examples/: 1d.rs  lj.rs
src/: lib.rs
