[package]
name = "tdmc"
version = "0.1.0"
authors = ["Baeo Maltinksy <baeo.maltinsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
im-rc = "13.0.0"
lazy_static = "1.4.0"
rand_distr = "0.2.1"
rand_xorshift = "0.2.0"
rayon = "1.1.0"
ord_subset = "3.1.1"
itertools = "0.8.0"

[profile.release]
debug = true
# lto = true
