[package]
name = "tdmc"
version = "0.1.0"
authors = ["Baeo Maltinksy <baeo.maltinsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
lazy_static = "1.4.0"
rand_distr = "0.2.1"
rand_xorshift = "0.2.0"
rayon = "1.1.0"
ord_subset = "3.1.1"
smallvec = "0.6.10"

[profile.release]
# Note: setting LTO to true incurs a ~25% performance hit.
debug = true
